Initial CASPaxos commit

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 **/tla/*.toolbox/*.log
 **/tla/*.toolbox/*.pdf
 **/tla/*.toolbox/*.tex
+**/tla/*.toolbox/*___model_SnapShot*.launch
+**/tla/*.toolbox/**/*.tla
+**/tla/*.toolbox/**/*.out
+**/tla/*.toolbox/**/MC.cfg
 **/tla/*.pdf
+**/tla/*.old
 **/*~
 cluster/isabelle/output
